--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,12 @@ body {
 
 h1 {
 	font-family: "Raleway", sans-serif;
-	color: #0D2C40;
+	/*color: #0D2C40;*/
 	letter-spacing: 1px;
 	font-weight: 400;
 	font-size: 45px;
 	text-transform: uppercase;
+	margin: 0;
 }
 
 h2 {
@@ -28,10 +29,76 @@ p {
 
 a {
 	font-family: "Raleway", sans-serif;
-	color: #F15B31;
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 18px;
 	text-decoration: none;
 	text-transform: uppercase;
+	color: #FFFFFF;
+	margin: 0 20px;
+	border-bottom: 2px solid transparent;
 }
+
+a:hover {
+	border-bottom-color: white;
+}
+
+header {
+	background-color: #F15B31;
+	color: #FFFFFF;
+	padding: 30px 20px;
+}
+
+body {
+	margin: 0;
+}
+
+nav {
+	background-color: #00A6B3;
+	color: #FFFFFF;
+	padding: 20px 0;
+}
+
+main {
+	width: 850px;
+	margin: 35px auto;
+}
+
+img {
+	margin:40px 8px 0px 8px;
+}
+footer {
+	text-transform: uppercase;
+	padding: 0 20px 0 20px;
+	background: #0D2C40;
+	color: white;
+	font-size: 14px;
+	letter-spacing: .08em;
+	font-weight: 500;
+}
+
+.copyright {
+	float: left;
+	font-family: "Raleway", sans-serif;
+}
+
+.message {
+	float: right;
+	font-family: "Raleway", sans-serif;
+}
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	content: " ";
+	clear: both;
+	height: 0;
+	font-size: 0;
+}
+
+.name {
+	color: #F15B31;
+	font-weight: 700;
+}
+
+/*note to self - consider combining similar rules*/
