--- a/css/style.css
+++ b/css/style.css
@@ -3,29 +3,22 @@ body {
 	margin: 0;
 }
 
-h1 {
+h1, h2 {
 	font-family: "Raleway", sans-serif;
-	/*color: #0D2C40;*/
 	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+h1 {
 	font-weight: 400;
 	font-size: 45px;
-	text-transform: uppercase;
 	margin: 0;
 }
 
 h2 {
-	font-family: "Raleway", sans-serif;
 	color: #0D2C40;
-	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 20px;
-	text-transform: uppercase;	
-}
-
-p {
-	font-family: "Droid Serif", serif;
-	line-height: 26px;
-	font-size: 18px;
 }
 
 a {
@@ -58,7 +51,7 @@ nav {
 
 main {
 	width: 850px;
-	margin: 35px auto;
+	margin: 35px auto 0 auto;
 }
 
 img {
@@ -72,16 +65,30 @@ footer {
 	font-size: 14px;
 	letter-spacing: .08em;
 	font-weight: 500;
+	font-family: "Raleway", sans-serif;	
+	line-height: 26px;
+}
+
+button {
+	float: right;
+	border-radius: 2px;
+	font-size: 14px;
+	padding: 3px;
+
+}
+
+.instructions {
+	font-family: "Droid Serif", serif;
+	line-height: 26px;
+	font-size: 18px;
 }
 
 .copyright {
 	float: left;
-	font-family: "Raleway", sans-serif;
 }
 
 .message {
 	float: right;
-	font-family: "Raleway", sans-serif;
 }
 
 .clearfix:after {
@@ -98,4 +105,23 @@ footer {
 	font-weight: 700;
 }
 
+.ga-bonus {
+	font-size: 14px;
+	font-family: "Raleway", sans-serif;
+	text-transform: uppercase;
+	margin: 20px 0;
+}
+
+.score {
+	float: left;
+	font-weight: 900;
+	line-height: 28px;
+	display: inline;
+	margin: 0;
+	padding: 0 6px;
+	background-color: #00A6B3;
+	color: #FFFFFF;
+	border-radius: 8px;
+
+}
 /*note to self - consider combining similar rules*/
